operator/broker/routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: broker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: broker-artemis-service
                port:
                  number: 61617
